[package]
name = "feeding-live"
version = "0.1.0"
edition = "2021"
description = "Feeding Calculator Live Version"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"